[FIX] Replace missing background image with color

--- a/Resources/Private/Scss/_confirm.scss
+++ b/Resources/Private/Scss/_confirm.scss
@@ -17,7 +17,7 @@
 
 /* Container */
 #confirm-container {height:140px; width:420px; font: 16px/22px 'Trebuchet MS', Verdana, Arial; text-align:left; background:#fff; border:2px solid #c90230;}
-#confirm-container .header {height:30px; line-height:30px; width:100%; background:url(../../Public/Images/header.gif) repeat-x; color:#fff; font-weight:bold;}
+#confirm-container .header {height:30px; line-height:30px; width:100%; background: $primary-color; color:#fff; font-weight:bold;}
 #confirm-container .header span {padding-left:8px;}
 #confirm-container .message {color:#333; font-size:14px; margin:0; padding:12px 4px 12px 8px;}
 #confirm-container .buttons {line-height:26px; width:160px; float:right; padding:10px 8px 0;} 
